tests/fixtures/invalid/float_pow_set.py
# Cannot power Float and Set[int]
x: float = 1.0 ** {1, 2, 3}
